--- a/index.html
+++ b/index.html
@@ -9,27 +9,34 @@
 	<title>Slider</title>
 </head>
 <body>
-<header class="header">
-	<h1 class="header__title">Slider</h1>
-</header>
-<main class="main">
-	<section class="slider">
-		<ul class="slider__indicator">
-			<li class="slider__point"></li>
-			<li class="slider__point"></li>
-			<li class="slider__point"></li>
-		</ul>
-		<div class="slider__container">
-			<img class="slider__image" src="./images/slide-1.jpg" alt="Slide-1">
-			<img class="slider__image" src="./images/slide-2.jpg" alt="Slide-2">
-			<img class="slider__image" src="./images/slide-3.jpg" alt="Slide-3">
-		</div>
-		<button type="button" class="slider__button slider__button_type_prev"></button>
-		<button type="button" class="slider__button slider__button_type_next"></button>
-	</section>
-</main>
-<footer class="footer">
-	<p>© Ivan Monichev, 2022</p>
-</footer>
+<div class="wrapper">
+	<header class="header">
+		<h1 class="header__title">Slider</h1>
+	</header>
+	<main class="main">
+		<section class="slider">
+			<ul class="slider__indicator">
+				<li class="slider__point slider__point_active"></li>
+				<li class="slider__point"></li>
+				<li class="slider__point"></li>
+			</ul>
+			<div class="slider__container">
+				<div class="slider-line">
+					<img class="slider__image" src="./images/slide-1.jpg" alt="Slide-1">
+					<img class="slider__image" src="./images/slide-2.jpg" alt="Slide-2">
+					<img class="slider__image" src="./images/slide-3.jpg" alt="Slide-3">
+				</div>
+			</div>
+			<div class="slider__controller">
+				<button type="button" class="slider__button slider__button_type_prev">Назад</button>
+				<button type="button" class="slider__button slider__button_type_next">Вперёд</button>
+			</div>
+		</section>
+	</main>
+	<footer class="footer">
+		<p class="footer__copyright">© Ivan Monichev, 2022</p>
+	</footer>
+</div>
 </body>
+<script src="script.js"></script>
 </html>
