--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 				<li class="slider__point slider__point_active"></li>
 				<li class="slider__point"></li>
 				<li class="slider__point"></li>
+				<li class="slider__point"></li>
+				<li class="slider__point"></li>
 			</ul>
 			<div class="slider__container">
 				<div class="slider-line">
 					<img class="slider__image" src="./images/slide-1.jpg" alt="Slide-1">
 					<img class="slider__image" src="./images/slide-2.jpg" alt="Slide-2">
 					<img class="slider__image" src="./images/slide-3.jpg" alt="Slide-3">
+					<img class="slider__image" src="./images/slide-4.jpeg" alt="Slide-4">
+					<img class="slider__image" src="./images/slide-5.jpeg" alt="Slide-5">
 				</div>
 			</div>
 			<div class="slider__controller">
